k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sidatingapp-1
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sidatingapp-1
  template:
    metadata:
      labels:
        app: sidatingapp-1
    spec:
      containers:
        - name: springboot-container
          image: harmanhakim/sidatingapp-1:REPLACE_ME_TAG
          ports:
            - containerPort: 8080
