k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sidatingapp-2-service
  namespace: default
spec:
  selector:
    app: sidatingapp-2
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8081
